--- a/src/index.css
+++ b/src/index.css
@@ -28,3 +28,24 @@
     object-position: center;
   }
 }
+
+/* 修復服務詳情頁面列表編號重複問題 */
+.prose ol {
+  counter-reset: item;
+  list-style: none;
+  padding-left: 0;
+}
+
+.prose ol li {
+  counter-increment: item;
+  margin-bottom: 0.75rem;
+  padding-left: 1.75rem;
+  position: relative;
+}
+
+.prose ol li::before {
+  content: counter(item) ".";
+  position: absolute;
+  left: 0;
+  font-weight: bold;
+}
